--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,11 @@ background-repeat: no-repeat;
 background-size: 500px;
     background-position-x: 88%;
     background-position-y: 200px;
-        height: 100vh;
+        height: 768px;
+}
+
+.main_bg{
+	   height: 768px;
 }
 .main_text{
     color: #fff;
@@ -162,7 +166,7 @@ color: #fff;
 }
 
 .main_text a:hover{ 
-  background-color: rgba(255,255,255,0.95);
+  background-color: #f1e6bd;
   color: #666;
   
 
@@ -213,7 +217,7 @@ color: #666;
 }
 
 .second_text a:hover{ 
-  background-color: #fff;
+  background-color: #f1e6bd;
   color: #000;
 
   }
@@ -316,7 +320,7 @@ color: #666;
 }
 
 .third_text a:hover{ 
-  background-color: #fff;
+  background-color: #f1e6bd;
   color: #666;
 
   }
@@ -397,7 +401,7 @@ color: #666;
 }
 
 .food_text  a:hover{ 
-  background-color: #fff;
+  background-color: #f1e6bd;
   color: #666;
 
   }
@@ -473,7 +477,7 @@ color: #666;
 }
 
 .art_text a:hover{ 
-  background-color: #fff;
+  background-color: #f1e6bd;
   color: #000;
 
   }
@@ -553,7 +557,7 @@ color: #666;
 }
 
 .fun_text  a:hover{ 
-  background-color: #fff;
+  background-color: #f1e6bd;
   color: #666;
 
   }
@@ -617,7 +621,7 @@ color: #666;
 }
 
 .teacher_text a:hover{ 
-  background-color: #fff;
+  background-color:#f1e6bd;
   color: #666;
 
   }
@@ -726,7 +730,7 @@ color: #666;
 }
 
 .gallery_text a:hover{ 
-  background-color: #fff;
+  background-color:#f1e6bd;
   color: #666;
 
   }
@@ -789,7 +793,7 @@ color: #666;
 }
 
 .reviews_text a:hover{ 
-  background-color: #fff;
+  background-color: #f1e6bd;
   color: #666;
 
   }
@@ -854,7 +858,7 @@ color: #666;
 }
 
 .contacts_text a:hover{ 
-  background-color: #fff;
+  background-color: #f1e6bd;
   color: #666;
 
   }
