--- a/css/main.css
+++ b/css/main.css
@@ -670,6 +670,134 @@ border-radius: 50%
 }
 
 
+
+
+.news{
+	//height: 550px;
+}
+.news_text {
+ // margin-top: 10%;
+  position: relative;
+  width:100%;
+  display: inline-block;
+  text-align: center;
+     padding-top: 50px;
+     
+}
+
+
+.news_text h2{
+font-size: 40px;
+
+}
+
+.news_text p{
+color: #666;
+    font-size: 21px;
+
+
+}
+
+
+.news_text a{
+  color: #666;
+  font-size: 30px;
+  padding: 5px 25px;
+  border: 2px solid #666;
+  text-decoration: none;
+  background-color: transparent;
+    -webkit-transition: all 0.5s ease-in-out 0s;
+  -moz-transition: all 0.5s ease-in-out 0s;
+  -o-transition: all 0.5s ease-in-out 0s;
+  transition: all 0.5s ease-in-out 0s;
+      top: 15px;
+    position: relative;
+}
+
+.news_text a:hover{ 
+  background-color:#f1e6bd;
+  color: #666;
+
+  }
+
+.news_text h2:after {
+    content: " ";
+    background-color: rgba(255, 219, 77, 1);
+    width: 45px;
+    height: 9px;
+    margin: 5px auto 0;
+    position: relative;
+    display: block;
+    text-align: left;
+    right: 48%;
+    margin-top: 0px;
+    position: absolute;
+}
+
+
+.news ul{
+  text-align: center;
+}
+.news ul .news_item_1{background-image: url(img/foods.jpg);height: 250px; background-position: 50%;   background-size: cover;}
+.news ul .news_item_2{background-image: url(img/new2.jpg);height: 250px;background-position: 50%;    background-size: cover;}
+.news ul .news_item_3{background-image: url(img/new3.jpg);height: 250px;background-position: 50%;    background-size: cover;}
+.news ul li{
+  display: inline-block;
+  width: 30%;
+  vertical-align: top;
+  min-height: 250px;
+  margin: 15px 15px;
+  background-size: 100%;
+  position: relative;
+  background-size: 100%;
+
+
+}
+.news_shadow{
+	height: 100%;
+	  background: -moz-linear-gradient(top, rgba(255,255,255,0) 60%, rgba(251,251,251,0) 61%, rgba(102,102,102,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, rgba(255,255,255,0) 60%,rgba(251,251,251,0) 61%,rgba(102,102,102,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, rgba(255,255,255,0) 60%,rgba(251,251,251,0) 61%,rgba(102,102,102,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#666666',GradientType=0 ); /* IE6-9 */
+}
+.text {
+    bottom: 0;
+    position: absolute;
+    left: 0;
+    display: block;
+    overflow: auto;
+        text-align: left;
+            padding-left: 5px;
+
+}
+.news ul li  h3{
+
+  font-weight: 900;
+          color: #fff;
+          font-size: 18px;
+}
+.news ul li p{
+  text-transform: lowercase;
+//padding: 0px 5px;
+    color: #fff;
+    font-size: 16px;
+}
+.news ul li a{
+      position: relative;
+    bottom: 0;
+}
+
+.news ul li img{
+width: 80%;
+border-radius: 50%
+}
+
+
+
+
+
+
+
 .gallery{
 	//height: 550px;
 }
