--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ width: 136px;
 }
 .white_bg {
 	background-color: rgba(255,255,255,0.5);
-	height: 100vh;
+	height: 100%;
     max-height: 900px;
    position: absolute;
      width: 50%;
