--- a/css/main.css
+++ b/css/main.css
@@ -287,7 +287,7 @@ height: 550px;
      
 }
 .third_box_bg {
-    background-image: url(img/dost2.jpg);
+    background-image: url(img/dostn.jpg);
     height: 100%;
     background-repeat: no-repeat;
     background-size: 56%;
